src/objects/Competition__c.object
<CustomObject>
    <description>Owner - Brad Baldwin</description>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>Competitor_Name__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_of_Date_Billing__c</fullName>
        <label>As of Date - Billing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_of_Date_Claim__c</fullName>
        <label>As of Date - Claim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>As_of_Date_Policy__c</fullName>
        <label>As of Date - Policy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_License_Price__c</fullName>
        <label>Pricing</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Billing_Competition_Tier_Domestic__c</fullName>
        <label>Billing (NA)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Competition_Tier_International__c</fullName>
        <label>Billing (EMEA, APAC)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Overview__c</fullName>
        <label>Billing Overview</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Billing_Solution_Name__c</fullName>
        <label>Billing Solution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Strengths__c</fullName>
        <label>Billing Strengths</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Billing_Weaknesses__c</fullName>
        <label>Billing Weaknesses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Claim_Solution_Name__c</fullName>
        <label>Claim Solution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Competition_Tier_Domestic__c</fullName>
        <label>Claims (NA)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Competition_Tier_International__c</fullName>
        <label>Claims (EMEA, APAC)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Overview__c</fullName>
        <label>Claims Overview</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Claims_Strengths__c</fullName>
        <label>Claims Strengths</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Claims_Weaknesses__c</fullName>
        <label>Claims Weaknesses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Customers__c</fullName>
        <label>Competitor wins &amp; named customers</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competition</relationshipLabel>
        <relationshipName>Competition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Focus__c</fullName>
        <label>Country Focus</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LatAm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gartner_Rating_Billing__c</fullName>
        <label>Gartner Rating - Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gartner_Rating_Claim__c</fullName>
        <label>Gartner Rating - Claim</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gartner_Rating_Policy__c</fullName>
        <label>Gartner Rating - Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guidewire_Wins_against_this_Competitor__c</fullName>
        <label>Deals we won against competitor</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HQ_Location__c</fullName>
        <formula>Competitor_Name__r.BillingStreet  &amp; BR() &amp;  Competitor_Name__r.BillingCity  &amp; &quot;,&quot; &amp; &quot; &quot; &amp;  Competitor_Name__r.BillingState &amp; &quot; &quot; &amp;  Competitor_Name__r.BillingPostalCode  &amp; BR() &amp;  Competitor_Name__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HQ Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_this_competitor_won_against_us__c</fullName>
        <label>How competitor won</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_we_won_against_this_competitor__c</fullName>
        <label>How we won</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <label>Implemen. Comments</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LOB_Supported__c</fullName>
        <label>LOB Supported</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers Compensation</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_Tiers__c</fullName>
        <label>Market Tiers</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Customers_in_Production_Claim__c</fullName>
        <label># of Customers in Production - Claim</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Customers_in_Production_Policy__c</fullName>
        <label># of Customers in Production - Policy</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Live_Installations__c</fullName>
        <label>Installations</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Numberof_Customers_in_Production_Billing__c</fullName>
        <label># of Customers in Production - Billing</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>TEXT ( Competitor_Name__r.Ownership)</formula>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <label>Partners</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Policy_Competition_Tier_Domestic__c</fullName>
        <label>Policy (NA)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Competition_Tier_International__c</fullName>
        <label>Policy (EMEA, APAC)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Overview__c</fullName>
        <label>Policy Overview</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Policy_Solution_Name__c</fullName>
        <label>Policy Solution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Strengths__c</fullName>
        <label>Policy Strengths</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Policy_Weaknesses__c</fullName>
        <label>Policy Weaknesses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Products_Offered__c</fullName>
        <label>Products Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Suite</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Suite_Competition_Tier_Domestic__c</fullName>
        <label>Suite (NA)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suite_Competition_Tier_International__c</fullName>
        <label>Suite (EMEA, APAC)</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suite_Overview__c</fullName>
        <label>Suite Overview</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Suite_Strengths__c</fullName>
        <label>Suite Strengths</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Suite_Weaknesses__c</fullName>
        <label>Suite Weaknesses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <formula>Competitor_Name__r.Year_Founded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Founded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <formula>Competitor_Name__r.NumberOfEmployees</formula>
        <label># of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Focus__c</columns>
        <columns>LOB_Supported__c</columns>
        <columns>Market_Tiers__c</columns>
        <columns>of_Employees__c</columns>
        <columns>Year_Founded__c</columns>
        <columns>Ownership__c</columns>
        <columns>Products_Offered__c</columns>
        <columns>Website__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Billing_Competitors</fullName>
        <columns>NAME</columns>
        <columns>Billing_Solution_Name__c</columns>
        <columns>Numberof_Customers_in_Production_Billing__c</columns>
        <columns>Country_Focus__c</columns>
        <columns>LOB_Supported__c</columns>
        <columns>Market_Tiers__c</columns>
        <columns>of_Employees__c</columns>
        <columns>Ownership__c</columns>
        <columns>Year_Founded__c</columns>
        <columns>Billing_Competition_Tier_International__c</columns>
        <columns>Billing_Competition_Tier_Domestic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products_Offered__c</field>
            <operation>includes</operation>
            <value>Billing Mgmt</value>
        </filters>
        <label>Billing Competitors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Claim_Competitors</fullName>
        <columns>NAME</columns>
        <columns>Claim_Solution_Name__c</columns>
        <columns>Number_of_Customers_in_Production_Claim__c</columns>
        <columns>Country_Focus__c</columns>
        <columns>LOB_Supported__c</columns>
        <columns>Market_Tiers__c</columns>
        <columns>of_Employees__c</columns>
        <columns>Year_Founded__c</columns>
        <columns>Ownership__c</columns>
        <columns>As_of_Date_Claim__c</columns>
        <columns>Gartner_Rating_Claim__c</columns>
        <columns>Claims_Competition_Tier_Domestic__c</columns>
        <columns>Claims_Competition_Tier_International__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products_Offered__c</field>
            <operation>includes</operation>
            <value>Claim Mgmt</value>
        </filters>
        <label>Claim Competitors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Policy_Competitors</fullName>
        <columns>NAME</columns>
        <columns>Policy_Solution_Name__c</columns>
        <columns>Number_of_Customers_in_Production_Policy__c</columns>
        <columns>Country_Focus__c</columns>
        <columns>LOB_Supported__c</columns>
        <columns>Market_Tiers__c</columns>
        <columns>Gartner_Rating_Policy__c</columns>
        <columns>As_of_Date_Policy__c</columns>
        <columns>of_Employees__c</columns>
        <columns>Year_Founded__c</columns>
        <columns>Ownership__c</columns>
        <columns>Policy_Competition_Tier_Domestic__c</columns>
        <columns>Policy_Competition_Tier_International__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Products_Offered__c</field>
            <operation>includes</operation>
            <value>Policy Mgmt</value>
        </filters>
        <label>Policy Competitors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Competition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>